fixed all changes to latest CongoCC version